src/test/deca/context/valid/println_multiple_args.deca
// Description:
//    Utilisation ud println
//
// Resultats:
//    ok

{
   println("hello", "my", "world");
}
