src/test/deca/context/invalid/println_no_arg.deca
// Description:
//    Utilisation ud println
//
// Resultats:
//    Ligne 11 : pas assez d'argument
// 

{
   println();
}
